removed line-height from dropdowns in new. (hopefully fixes jank alignment in ipad)

--- a/app/sass/new_entry.sass
+++ b/app/sass/new_entry.sass
@@ -57,7 +57,6 @@
         +center
         border: 0
         height: 34px
-        line-height: 34px
         padding: 7px 8px 7px 38px
         margin-left: -36px
         option
@@ -134,7 +133,6 @@
             +center
             border: none
             height: 34px
-            line-height: 34px
             padding: 7px 8px 7px 32px
             margin-left: -32px
             option
